# scalable_systems

./: .gitignore  README.md
project_1/: docker-compose.yml  docker_compose.yaml  project_notes.md
project_1/data-ingestion/: README.md  ingestion.py  requirements.txt  ride.py
project_1/monitoring/: prometheus.yml
project_1/opencep/: main.py
project_1/pattern_recogniser/: README.md  main.py  patterns.txt  requirements.txt  ride.py  shedding-artifact.py  shedding.py  snap.json
project_1/pattern_recogniser/condition/: KCCondition.py
project_1/pattern_recogniser/stream/: FileStream.py
project_1/rmq/: definitions.json
project_1/test_data/: example_patterns_from_test_run.txt  generate.py  summarize.py
project_1/test_data/runs/: 10.txt  30.txt  50.txt  90.txt  base.txt
project_1/test_data/runs/100EPS/: 70.txt  base.txt
project_1/test_data/runs/150EPS/: 10.txt
project_2/: demo_workflow.py  docker-compose.yml  eda.py  graph_rag.py  graph_rag_ui.py  nobel.kuzu.wal  pyproject.toml  scalable_systems.code-workspace  test_exemplars.py  test_postprocess.py  test_refinement.py
project_2/__marimo__/session/: graph_rag.py.json  graph_rag_ui.py.json
project_2/project_2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
