[project]
name = "marimo-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.1",
    "kuzu>=0.11.1",
    "marimo>=0.14.17",
    "arize-phoenix>=0.9.1",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "transformers>=4.57.1",
    "openinference-instrumentation-dspy>=0.1.30",
    "openinference-instrumentation-litellm>=0.1.28",
    "sentence-transformers>=5.1.2",
    "ipython>=9.7.0",
]
